Fix pathParam test, use Charset instance instead of name